--- a/ocrconverter/app/src/main/res/values/strings.xml
+++ b/ocrconverter/app/src/main/res/values/strings.xml
@@ -13,10 +13,11 @@
     <string name="ocr_success">Text read successfully</string>
     <string name="ocr_failure">No text captured</string>
     <string name="ocr_error">"Error reading text: %1$s"</string>
-    <string name="app_name">Text Reader</string>
+    <string name="app_name">OCR Reader</string>
+    <string name="title_activity_ocr">Scanner view</string>
     <string name="title_activity_navigation">NavigationActivity</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_camera">Scanner</string>
+    <string name="title_settings">Settings</string>
 
 </resources>
