--- a/ocrconverter/app/src/main/res/values/strings.xml
+++ b/ocrconverter/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="test">test item</string>
     <string name="ok">OK</string>
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
+    <string name="permission_storage_rationale">Access to the storage is needed for screenshot feature</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
     <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
     <string name="title_activity_main">Ocr Detector Sample</string>
